--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.128.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.128.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.128.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.128.0",
     "@aws-cdk/aws-cognito": "^1.128.0",
     "@aws-cdk/aws-dynamodb": "^1.128.0",
     "@aws-cdk/aws-lambda": "^1.128.0",
