--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-cdk/aws-lambda": "^1.128.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.128.0",
     "@aws-cdk/core": "1.128.0",
+    "jwt-decode": "^3.1.2",
     "source-map-support": "^0.5.16"
   }
 }
