--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "dev": "IS_LOCAL=true ts-node src/handlers/index.ts"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.128.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.128.0",
@@ -30,7 +32,10 @@
     "@aws-cdk/aws-lambda": "^1.128.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.128.0",
     "@aws-cdk/core": "1.128.0",
+    "@vendia/serverless-express": "^4.5.2",
+    "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
+    "morgan": "^1.10.0",
     "source-map-support": "^0.5.16"
   }
 }
