--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.1",
     "aws-cdk": "1.128.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
@@ -32,6 +33,8 @@
     "@aws-cdk/aws-lambda": "^1.128.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.128.0",
     "@aws-cdk/core": "1.128.0",
+    "@aws-sdk/client-dynamodb": "^3.38.0",
+    "@aws-sdk/lib-dynamodb": "^3.38.0",
     "@vendia/serverless-express": "^4.5.2",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
