--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "aws-cdk": "1.128.0",
     "jest": "^27.3.1",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
@@ -36,6 +38,8 @@
     "@aws-sdk/client-dynamodb": "^3.38.0",
     "@aws-sdk/lib-dynamodb": "^3.38.0",
     "@vendia/serverless-express": "^4.5.2",
+    "base64url": "^3.0.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
