--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "aws-cdk": "1.128.0",
+    "aws-sdk-client-mock": "^0.5.5",
     "jest": "^27.3.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
