--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "base64url": "^3.0.1",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
     "source-map-support": "^0.5.16"
