--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
+    "deploy": "cdk deploy  --require-approval never --no-path-metadata",
     "dev": "IS_LOCAL=true ts-node src/handlers/index.ts"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.128.0",
+    "@aws-cdk/assert": "1.133.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
-    "aws-cdk": "1.128.0",
+    "aws-cdk": "1.133.0",
     "aws-sdk-client-mock": "^0.5.5",
     "jest": "^27.3.1",
     "supertest": "^6.1.6",
@@ -27,17 +28,18 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.128.0",
-    "@aws-cdk/aws-apigatewayv2": "^1.128.0",
-    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.128.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.128.0",
-    "@aws-cdk/aws-cognito": "^1.128.0",
-    "@aws-cdk/aws-dynamodb": "^1.128.0",
-    "@aws-cdk/aws-lambda": "^1.128.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.128.0",
-    "@aws-cdk/core": "1.128.0",
+    "@aws-cdk/aws-apigateway": "^1.133.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.133.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.133.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.133.0",
+    "@aws-cdk/aws-cognito": "^1.133.0",
+    "@aws-cdk/aws-dynamodb": "^1.133.0",
+    "@aws-cdk/aws-lambda": "^1.133.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.133.0",
+    "@aws-cdk/core": "1.133.0",
     "@aws-sdk/client-dynamodb": "^3.38.0",
     "@aws-sdk/lib-dynamodb": "^3.38.0",
+    "@aws-sdk/client-s3": "^3.38.0",
     "@vendia/serverless-express": "^4.5.2",
     "base64url": "^3.0.1",
     "crypto": "^1.0.1",
