--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check release branch
-        if: ${{ github.base_ref == 'release' }}
+        if: ${{ github.base_ref == 'release' || github.ref == 'refs/heads/release' }}
         run: echo "SYSTEM_ENV=prd" >> $GITHUB_ENV
 
       - name: Check main branch
-        if: ${{ github.base_ref == 'main' }}
+        if: ${{ github.base_ref == 'main' || github.ref == 'refs/heads/main' }}
         run: echo "SYSTEM_ENV=stg" >> $GITHUB_ENV
 
       - name: Setup environment variables
