--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,15 +42,17 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Unit tests
-        if: contains(github.event_name, 'pull_request')
-        run: npm run test
-
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@master
         with:
           role-to-assume: ${{secrets.ROLE_ARN}}
           aws-region: ${{env.AWS_REGION}}
+
+      - name: Unit tests
+        if: contains(github.event_name, 'pull_request')
+        run: |
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
+          npm run test
 
       - name: CDK Diff Check
         if: contains(github.event_name, 'pull_request')
